--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -33,20 +33,10 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a href="{{ path('app_service',{id: 2}) }}" class="nav-link">
+                <a href="{{ path('app_service_marketing_consulter') }}" class="nav-link">
                     <i class="mdi mdi-view-headline menu-icon"></i>
                     <span class="menu-title">Marketing</span>
                     <i class="menu-arrow"></i></a>
-                <div class="submenu">
-                    <ul class="submenu-item">
-                        {% if app.session.get('dossier')[1]['dossier_1']  is defined %}
-                            <li class="nav-item"><a class="nav-link" href="{{ path('app_service',{id:app.session.get('dossier')[1]['id']}) }}">{{ app.session.get('dossier')[1]['dossier_1'] }}</a></li>
-                        {% endif %}
-                        {% if app.session.get('dossier')[1]['dossier_2']  is defined %}
-                            <li class="nav-item"><a class="nav-link" href="{{ path('app_service',{id:app.session.get('dossier')[1]['id']}) }}">{{ app.session.get('dossier')[1]['dossier_2'] }}</a></li>
-                        {% endif %}
-                    </ul>
-                </div>
             </li>
             <li class="nav-item">
                 <a href="{{ path('app_service',{id: 4}) }}" class="nav-link">
@@ -77,7 +67,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a href="{{ path('app_service',{id: 7}) }}" class="nav-link">
+                <a href="{{ path('app_service_comptabilite_consulter') }}" class="nav-link">
                     <i class="mdi mdi-view-headline menu-icon"></i>
                     <span class="menu-title">Comptabilité</span>
                     <i class="menu-arrow"></i></a>
