--- a/templates/service/add_dossier.html.twig
+++ b/templates/service/add_dossier.html.twig
@@ -4,26 +4,11 @@
 
 
 {% block content %}
-    <div style="margin-left: 40%;">
-        <button type="button" class="btn btn-primary btn-rounded btn-fw">{{ service.nomService }}</button>
+ <div  style="margin-left:40%;">
+        <button  type="button" class="btn btn-primary btn-rounded btn-fw">{{  service.nomService | upper }}</button>
     </div>
-    <div class="row"  style="margin-left: 30%; margin-top: 10px; margin-bottom: 10px;">
-
-        <div class="col-md-3 col-lg-4 col-sm-4">
-            <a href="{{ path('app_service',{id:service.id }) }}"><button type="button" class="btn btn-success btn-rounded btn-fw">Dossier</button></a>
-        </div>
-
-        <div class="col-md-3 col-lg-4 col-sm-4">
-            <a href="{{ path('app_service_cloturer_dossier',{service:service.id}) }}"><button type="button" class="btn btn-warning btn-rounded btn-fw">Clôturer</button></a>
-        </div>
-
-        <div class="col-md-3 col-lg-4 col-sm-4">
-            <a href="{{ path('app_service_historique_dossier',{service:service.id}) }}"><button type="button" class="btn btn-info btn-rounded btn-fw">Historique</button></a>
-        </div>
-
-    </div>
-    <br>
-    <br>
+    {% include "service/menu.html.twig" %}
+    <div class="row">
     <div class="col-12 grid-margin stretch-card">
         <div class="card">
             <div class="card-body">
@@ -37,4 +22,5 @@
             </div>
         </div>
     </div>
+     </div>
 {% endblock %}
